[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/Environment/moving platform.png" type="Texture" id=1]
[ext_resource path="res://src/Environment/Platform.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 64, 7.5 )

[sub_resource type="OccluderPolygon2D" id=2]
polygon = PoolVector2Array( 57, -8, -57, -8, -64, -1, -64, 8, 64, 8, 64, 0 )

[node name="Platform" type="Node2D"]
script = ExtResource( 2 )

[node name="Debug_line" type="Node2D" parent="."]

[node name="Platform_base" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="Platform_base"]
texture = ExtResource( 1 )

[node name="KinematicBody2D" type="KinematicBody2D" parent="Platform_base"]
collision_layer = 2
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platform_base/KinematicBody2D"]
position = Vector2( 0, 2.5 )
shape = SubResource( 1 )
one_way_collision_margin = 8.5

[node name="Tween" type="Tween" parent="Platform_base"]

[node name="LightOccluder2D" type="LightOccluder2D" parent="Platform_base"]
occluder = SubResource( 2 )

[connection signal="tween_completed" from="Platform_base/Tween" to="." method="_on_Tween_tween_completed"]
